[CHORE] 이름, 아이디 hint 삭제

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -110,16 +110,17 @@
 
             <EditText
                 android:id="@+id/et_mypage_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:enabled="false"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:hint=""
                 android:inputType="textPersonName"
                 android:text="@={myPageviewModel.mypageName}"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/fl_img"
                 app:layout_constraintTop_toTopOf="@+id/tvname" />
 
@@ -140,17 +141,17 @@
                 android:id="@+id/et_mypage_id"
                 cursorPos="@{myPageviewModel.cursorPos}"
                 upperCase="@{myPageviewModel.upperCase}"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:enabled="false"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:hint=""
                 android:inputType="textPersonName"
                 android:maxLength="16"
                 android:text="@={myPageviewModel.mypageId}"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/et_mypage_name"
                 app:layout_constraintStart_toStartOf="@+id/et_mypage_name"
                 app:layout_constraintTop_toTopOf="@+id/tvid" />
 
@@ -166,9 +167,7 @@
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/et_mypage_id"
-                app:layout_constraintTop_toBottomOf="@+id/et_mypage_id">
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintTop_toBottomOf="@+id/et_mypage_id"></androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/btn_mypage_cancel"
