--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,9 +10,7 @@
             type="org.seemeet.seemeet.ui.viewmodel.RegisterViewModel" />
     </data>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -184,6 +184,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_regular"
                     android:hint="@string/register_checkpw"
                     android:inputType="textPassword"
+                    android:maxLength="16"
                     android:paddingStart="12dp"
                     android:text="@={registerViewModel.registerCheckpw}"
                     android:textColor="@color/gray06"
