[MOD] string 추가

--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@string/mypage_info1"
+            android:text="@string/login_main_info1"
             android:textColor="@color/gray05"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -104,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@string/mypage_info2"
+            android:text="@string/login_main_info2"
             android:textColor="@color/gray05"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@string/mypage_info3"
+            android:text="@string/login_main_info3"
             android:textColor="@color/gray05"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -132,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@string/mypage_info4"
+            android:text="@string/login_main_info4"
             android:textColor="@color/gray05"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -146,7 +146,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@string/mypage_info5"
+            android:text="@string/login_main_info5"
             android:textColor="@color/gray05"
             android:textSize="12sp"
             android:textStyle="normal"
