--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -66,7 +66,7 @@
                     android:layout_gravity="bottom|right"
                     android:clickable="true"
                     android:visibility="invisible"
-                    app:srcCompat="@drawable/ic_group_camera"
+                    app:srcCompat="@android:drawable/ic_menu_camera"
                     tools:ignore="TouchTargetSizeCheck" />
 
             </FrameLayout>
