[FEAT] 마이페이지 이름 기호 입력 막기, getPath 함수 수정
저장소에서 갤러리 등 다른 경로에서 받아온 사진도 가능

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -110,6 +110,8 @@
 
             <EditText
                 android:id="@+id/et_mypage_name"
+                cursorPos="@{myPageviewModel.cursorPos}"
+                invalidCase="@{myPageviewModel.invalidCase}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -117,6 +119,7 @@
                 android:enabled="false"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:inputType="textPersonName"
+                android:maxLength="6"
                 android:text="@={myPageviewModel.mypageName}"
                 android:textColor="@color/black"
                 android:textSize="16sp"
