--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -57,7 +57,7 @@
                     android:layout_width="99dp"
                     android:layout_height="99dp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/ic_img_list_null" />
+                    app:srcCompat="@drawable/ic_img_profile" />
 
                 <ImageView
                     android:id="@+id/btn_select_image"
