[FEAT] 약속신청 친구 선택 목록에 프로필 띄우기

--- a/app/src/main/res/layout/item_apply_search_friend.xml
+++ b/app/src/main/res/layout/item_apply_search_friend.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/iv_apply_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:src="@drawable/ic_img_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_img_profile" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_apply_name"
