[FEAT] 회원가입 이름 입력 시 기호 막기

--- a/app/src/main/res/layout/activity_register_name_id_activity.xml
+++ b/app/src/main/res/layout/activity_register_name_id_activity.xml
@@ -86,6 +86,8 @@
 
             <EditText
                 android:id="@+id/et_name"
+                cursorPos="@{registerNameIdviewModel.cursorPos}"
+                invalidCase="@{registerNameIdviewModel.invalidCase}"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="16dp"
