[FIX] 회원가입 아이디 입력시 불가능한 문자 입력 막기, 대문자 소문자로 자동 변경 버그 수정

--- a/app/src/main/res/layout/activity_register_name_id_activity.xml
+++ b/app/src/main/res/layout/activity_register_name_id_activity.xml
@@ -119,8 +119,8 @@
 
             <EditText
                 android:id="@+id/et_id"
-                etId="@{registerNameIdviewModel.registerId}"
-                status="@{registerNameIdviewModel.status}"
+                cursor="@{registerNameIdviewModel.idCursorPos}"
+                upper="@{registerNameIdviewModel.idUpperCase}"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="12dp"
