--- a/app/src/main/res/layout/activity_register_name_id_activity.xml
+++ b/app/src/main/res/layout/activity_register_name_id_activity.xml
@@ -151,8 +151,8 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_start"
-                etId="@{registerNameIdviewModel.registerId}"
-                etName="@{registerNameIdviewModel.registerName}"
+                registerId="@{registerNameIdviewModel.registerId}"
+                registerName="@{registerNameIdviewModel.registerName}"
                 status="@{registerNameIdviewModel.status}"
                 android:layout_width="0dp"
                 android:layout_height="53dp"
