[CHORE] 함수 하나로 합치기

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -140,8 +140,8 @@
 
             <EditText
                 android:id="@+id/et_mypage_id"
-                mypageIdCursorPos="@{myPageviewModel.id_cursorPos}"
-                mypageIdUpperCase="@{myPageviewModel.id_upperCase}"
+                IdCursorPos="@{myPageviewModel.id_cursorPos}"
+                IdUpperCase="@{myPageviewModel.id_upperCase}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
