--- a/app/src/main/res/layout/activity_register_name_id_activity.xml
+++ b/app/src/main/res/layout/activity_register_name_id_activity.xml
@@ -117,8 +117,8 @@
 
             <EditText
                 android:id="@+id/et_id"
-                registerIdCursorPos="@{registerNameIdviewModel.id_cursorPos}"
-                registerIdUpperCase="@{registerNameIdviewModel.id_upperCase}"
+                IdCursorPos="@{registerNameIdviewModel.id_cursorPos}"
+                IdUpperCase="@{registerNameIdviewModel.id_upperCase}"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="12dp"
