--- a/app/src/main/res/drawable/ic_camera.xml
+++ b/app/src/main/res/drawable/ic_camera.xml
@@ -1,8 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="16dp"
     android:height="16dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16">
-  <path
-      android:pathData="M0,0h16v16h-16z"/>
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M161.5,49.9c-11.5,3.7 -22.5,12.3 -28.1,21.8 -5.3,9 -6.6,14.8 -7.1,30.5l-0.5,14.8 -38.5,-0c-42.8,-0 -45.3,0.3 -57.4,6.6 -12.1,6.3 -22.6,18.9 -27.2,32.3l-2.2,6.6 -0.3,124.5c-0.2,87.5 0.1,126.4 0.8,131 3.2,18.7 17.1,35.3 35.6,42.7l6.9,2.8 212.5,-0 212.5,-0 6.9,-2.8c18.5,-7.4 32.4,-24 35.6,-42.7 0.7,-4.6 1,-43.5 0.8,-131l-0.3,-124.5 -2.2,-6.6c-4.6,-13.4 -15.1,-26 -27.2,-32.3 -12.1,-6.3 -14.6,-6.6 -57.4,-6.6l-38.5,-0 -0.5,-14.8c-0.5,-15.7 -1.8,-21.5 -7.1,-30.5 -5.7,-9.7 -16.8,-18.2 -28.6,-21.9 -5.1,-1.6 -12.7,-1.8 -94.5,-1.7 -79.8,0.1 -89.5,0.3 -94,1.8zM277.6,167.5c85.8,15 130.2,112 85.6,187 -33.3,56.1 -105.5,76.9 -163.6,47.2 -36.9,-18.8 -60.9,-52.3 -67.1,-93.7 -6.8,-44.4 12.6,-90.4 49.6,-118 14.3,-10.7 33.9,-19.2 51.4,-22.3 11,-2 33.1,-2.1 44.1,-0.2z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M244.5,208.6c-37.9,6.1 -66.7,36.3 -70.4,73.6 -3.9,40.4 21,76.6 60.7,88 11,3.2 31.4,3.2 42.4,-0 33.5,-9.6 57.3,-37.4 60.6,-70.7 2.5,-25.8 -5.7,-49.3 -23.7,-67.2 -9.9,-9.9 -23.9,-18 -37.6,-21.7 -6,-1.7 -26.3,-2.9 -32,-2z"
+        android:strokeColor="#00000000" />
 </vector>
