--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -85,8 +85,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintStart_toStartOf="@+id/tv_detail_time"
-                app:layout_constraintTop_toBottomOf="@id/tv_detail_time"></com.google.android.material.chip.ChipGroup>
+                app:layout_constraintTop_toBottomOf="@id/tv_detail_time" />
 
             <View
                 android:id="@+id/divider4"
