--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -70,15 +70,17 @@
 
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/cg_send_list"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_send"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:singleLine="true"
-                        android:layout_marginTop="23dp"
                         android:layout_marginStart="16dp"
-                        android:layout_marginBottom="7dp"/>
+                        android:layout_marginTop="23dp"
+                        android:layout_marginBottom="7dp"
+                        android:layout_marginEnd="2dp"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/tv_send_count"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_send"/>
 
                     <TextView
                         android:id="@+id/tv_send_count"
