[FEAT] 약속 신청할 친구 chip 생성 horizontal scrollview

--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_first_apply"
@@ -77,6 +76,7 @@
                 android:inputType="text|textCapWords|textPersonName"
                 android:maxLines="1"
                 android:paddingLeft="46dp"
+                android:scrollbars="horizontal"
                 android:singleLine="true"
                 android:textColorHint="@color/gray04"
                 android:textSize="14sp"
@@ -88,8 +88,8 @@
 
             <ImageView
                 android:id="@+id/iv_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="36dp"
+                android:layout_height="33dp"
                 android:layout_marginStart="8dp"
                 android:src="@drawable/ic_search_black"
                 app:layout_constraintBottom_toBottomOf="@+id/et_to_who"
@@ -100,23 +100,38 @@
                 android:id="@+id/tv_who"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:text="@string/first_apply_receive_friend"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_search"
                 app:layout_constraintStart_toEndOf="@+id/iv_search"
-                app:layout_constraintStart_toStartOf="@+id/chipGroup"
+                app:layout_constraintStart_toStartOf="@+id/hsv"
                 app:layout_constraintTop_toTopOf="@+id/iv_search" />
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipGroup"
-                android:layout_width="0dp"
+            <HorizontalScrollView
+                android:id="@+id/hsv"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_marginStart="4dp"
+                android:fillViewport="true"
+                android:nestedScrollingEnabled="true"
+                android:paddingStart="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/et_to_who"
-                app:layout_constraintEnd_toEndOf="@+id/et_to_who"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/iv_search"
-                app:layout_constraintTop_toTopOf="@+id/et_to_who"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="@+id/et_to_who">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/chipGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbars="horizontal"
+                        android:visibility="visible" />
+                </LinearLayout>
+            </HorizontalScrollView>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_content_bg"
