[MOD] 버튼 bottom 제약

--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -14,6 +14,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:overScrollMode="never"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -138,6 +139,7 @@
                 android:id="@+id/cl_content_bg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="179dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_to_who">
@@ -187,9 +189,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="85dp"
                     android:background="@drawable/rectangle_gray01_10"
-                    app:layout_constraintBottom_toBottomOf="@id/apply_line"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="328:255"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -250,7 +251,7 @@
                         android:fontFamily="@font/spoqa_han_sans_neo_medium"
                         android:gravity="top"
                         android:hint="@string/first_apply_detail"
-                        android:inputType="textMultiLine|textPersonName"
+                        android:inputType="textMultiLine|text"
                         android:overScrollMode="always"
                         android:paddingStart="25dp"
                         android:paddingTop="10dp"
@@ -267,25 +268,26 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="NotSibling">
+
                 <View
                     android:id="@+id/apply_line"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@color/gray02"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_content_bg"
-                tools:ignore="NotSibling">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_next"
@@ -306,7 +308,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/apply_line" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
